# magpie

./: LICENSE.md  README.md
v1.0/Datasets/NoPresence/Test/Attack 0.1 - WiFi Deauthentication/: 0.1.amds.csv  0.1.audio.csv  0.1.csv  0.1.ip.csv  0.1.rf.csv  0.1.wifi.csv  (+1 more)
v1.0/Datasets/NoPresence/Train/: 0.train.amds.csv  0.train.audio.csv  0.train.ip.csv  0.train.rf.csv  0.train.wifi.csv  0.train.zigbee.csv
v1.0/Datasets/Presence/Train/: 1.train.amds.csv  1.train.audio.csv  1.train.ip.csv  1.train.rf.csv  1.train.wifi.csv  1.train.zigbee.csv
v1.0/Offline test Build/: RandomForest_ActivityModel_builder.py  UCB.py  amds_extract.py  magpie_rpp2.py  magpie_rpp_modules_df.py  modules_amds_df.py  nonstationary2.py
v1.0/RaspberryPi Build/: dpkg-selections.txt  init_magpie.sh  jackdaw_init.sh  magpie_datapreproc.py  magpie_main.py  magpie_run.py  magpie_train.py  push_feed.py  wifimon_init.sh
v1.0/magpie_parser-master/: CMakeLists.txt  README.md  compile.sh  rm.sh
v1.0/magpie_parser-master/src/: argread.c  argread.h  definitions.h  enumerator.c  enumerator.h  epoch_conv.c  epoch_conv.h  fileutils.c  fileutils.h  formatting.c  formatting.h  int_audio.c  int_audio.h  int_ipshort.c  int_ipshort.h  int_spectrum.c  int_spectrum.h  int_wifi.c  int_wifi.h  int_zbee.c  int_zbee.h  main.c  slot_wrap.c  slot_wrap.h  validations.c  validations.h
v1.0/magpie_parser-master/src/analysis/: generic.c  generic.h  main.c  math_func.c  math_func.h  processor.c  processor.h  temp.c  windowing.c  windowing.h
v1.0/magpie_parser-master/src/synchronizer/: inet_local.c  inet_local.h  main.c
(+91 files in other folders)
